log
Wed 19 Apr 2023 01:48:31 AM UTC: 
 tests:  0|6
total_score: 0/70
66da31f
Wed 19 Apr 2023 01:58:11 AM UTC: 
 hashmap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:3: error: expected ‘,’ or ‘;’ before ‘while’
   45 |   while(1)
      |   ^~~~~
hashmap.c:44:6: error: unused variable ‘codigo’ [-Werror=unused-variable]
   44 | long codigo = hash(key, map->capacity)
      |      ^~~~~~
hashmap.c: In function ‘createMap’:
hashmap.c:63:17: error: expected ‘;’ before ‘mapa’
   63 |   mapa->size = 0
      |                 ^
      |                 ;
   64 |   mapa->capacity = capacity;
      |   ~~~~           
cc1: all warnings being treated as errors
Compilation failed
ee21b58
Wed 19 Apr 2023 01:58:37 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:1: error: expected ‘,’ or ‘;’ before ‘while’
   45 | while(1)
      | ^~~~~
hashmap.c:44:6: error: unused variable ‘codigo’ [-Werror=unused-variable]
   44 | long codigo = hash(key, map->capacity)
      |      ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
450c12e
Wed 19 Apr 2023 01:58:47 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5fea3ea
Wed 19 Apr 2023 02:48:10 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:49:25: error: invalid operands to binary + (have ‘Pair *’ and ‘char *’)
   49 |     map->buckets[codigo]+=key;
      |                         ^~
Compilation failed
9e5b474
Wed 19 Apr 2023 02:48:21 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:49:25: error: assignment to ‘Pair *’ from incompatible pointer type ‘char *’ [-Werror=incompatible-pointer-types]
   49 |     map->buckets[codigo]=key;
      |                         ^
cc1: all warnings being treated as errors
Compilation failed
88c8383
Wed 19 Apr 2023 02:48:30 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:49:25: error: comparison of distinct pointer types lacks a cast [-Werror]
   49 |     map->buckets[codigo]==key;
      |                         ^~
hashmap.c:49:25: error: statement with no effect [-Werror=unused-value]
   49 |     map->buckets[codigo]==key;
      |     ~~~~~~~~~~~~~~~~~~~~^~~~~
cc1: all warnings being treated as errors
Compilation failed
df19c02
Wed 19 Apr 2023 02:49:17 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:49:9: error: assignment to ‘char *’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   49 |     key = map->buckets[codigo];
      |         ^
cc1: all warnings being treated as errors
Compilation failed
ba028d6
Wed 19 Apr 2023 02:50:20 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:49:29: error: expected expression before ‘long’
   49 |     map->buckets[codigo] += long(key);
      |                             ^~~~
Compilation failed
f8e1baa
Wed 19 Apr 2023 02:51:56 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:49:26: error: invalid operands to binary + (have ‘Pair *’ and ‘void *’)
   49 |     map->buckets[codigo] += value;
      |                          ^~
Compilation failed
a6558a6
Wed 19 Apr 2023 02:52:11 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:49:26: error: statement with no effect [-Werror=unused-value]
   49 |     map->buckets[codigo] == value;
      |     ~~~~~~~~~~~~~~~~~~~~~^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
73400f4
Wed 19 Apr 2023 02:52:38 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:49:26: error: invalid operands to binary + (have ‘Pair *’ and ‘void *’)
   49 |     map->buckets[codigo] += value;
      |                          ^~
Compilation failed
46c943a
Wed 19 Apr 2023 02:53:35 AM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2262223
Wed 19 Apr 2023 02:53:58 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2fa26b1
Wed 19 Apr 2023 02:54:21 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:50:17: error: array subscript is not an integer
   50 |     map->buckets[key]->value=value;
      |                 ^
Compilation failed
824856b
Wed 19 Apr 2023 02:54:37 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:50:17: error: ‘*map->buckets’ is a pointer; did you mean to use ‘->’?
   50 |     map->buckets->key->value=value;
      |                 ^~
      |                 ->
Compilation failed
7a8ea43
Wed 19 Apr 2023 02:54:51 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:50:17: error: request for member ‘key’ in something not a structure or union
   50 |     map->buckets.key->value=value;
      |                 ^
Compilation failed
712be55
Wed 19 Apr 2023 02:55:58 AM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
c601f23
Wed 19 Apr 2023 02:56:41 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7899936
Wed 19 Apr 2023 02:59:37 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
4ed5d9a
Wed 19 Apr 2023 03:00:13 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
142eb7b
Wed 19 Apr 2023 03:01:31 AM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:47:5: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   47 |     if(is_equal(map->buckets[codigo],key)==0)
      |     ^~
hashmap.c:49:7: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   49 |       break;
      |       ^~~~~
cc1: all warnings being treated as errors
Compilation failed
1fad4f2
Wed 19 Apr 2023 03:01:56 AM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|5
total_score: 10/70
8110630
Wed 19 Apr 2023 03:02:22 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
1e69184
Wed 19 Apr 2023 03:02:47 AM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
f1a7da5
Wed 19 Apr 2023 03:03:47 AM UTC: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
c2ac0e2
Wed 19 Apr 2023 03:03:58 AM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|5
total_score: 20/70
22c4ce3
Wed 19 Apr 2023 03:06:16 AM UTC: 
 hashmap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:49:23: error: comparison between pointer and integer [-Werror]
   49 |       if(map->current == NULL)
      |                       ^~
cc1: all warnings being treated as errors
Compilation failed
d7b749f
Wed 19 Apr 2023 03:07:00 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:49:13: error: ‘map’ is a pointer; did you mean to use ‘->’?
   49 |       if(map.current == NULL)
      |             ^
      |             ->
hashmap.c:56:12: error: ‘map’ is a pointer; did you mean to use ‘->’?
   56 |         map.current++;
      |            ^
      |            ->
Compilation failed
efaceb8
